# notemeet-app

./: .env.example  .gitignore  CNAME  README.md  build_macos.sh  generate_dmg_bg.py  generate_icons.py  generate_ppt.py  generate_ppt_cofounder.py  index.html  package-lock.json  package.json  server.js  setup.js  setup.sh  vite.config.js
assets/: MiniRecorder-Ch4yZFtT.js  MiniRecorder-CjTM5VzF.js  MiniRecorder-Clsv14JT.js  MiniRecorder-DUGV-jXl.js  index-BG1xAyYh.css  index-BlVSmonK.js  index-Cnq2lVMY.js  index-DJktkWTz.css  index-DXq0kHHz.js  index-OK4ds4m9.js  window-DHc-D870.js  window-DIsZzpeV.js  window-DZjo3j0n.js  window-Df9hZTOV.js
src/: App.jsx  MeetingNotification.jsx  MiniRecorder.jsx  MiniRecorder.test.jsx  main.jsx  styles.css  utils.js  utils.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  db.rs  detector.rs  google.rs  llm.rs  main.rs  whisper.rs
src/components/: AudioPlayer.jsx  ChatPanel.jsx  CommandPalette.jsx  NoteTemplates.jsx  ProfileModal.jsx  ShortcutSheet.jsx  ToastContext.jsx
src/context/: NoteContext.jsx
src/pages/: ActionsPage.jsx  AnalyticsPage.jsx  CalendarPage.jsx  HelpPage.jsx  HomePage.jsx  LoginPage.jsx  NotesPage.jsx
