[package]
name = "notemeet"
version = "0.1.0"
edition = "2021"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "icon-png", "fs-read-file", "dialog-open", "fs-write-file", "dialog-save", "shell-open", "system-tray", "custom-protocol" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.21"
hound = "3.5"
cpal = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
